Ajout functions.php

--- a/wp-content/themes/auxdelicesparis/style.css
+++ b/wp-content/themes/auxdelicesparis/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: aux delices de paris
+Theme Name: Aux Délices de Paris
 Theme URI: http://wordpress.org/themes/auxdelicesdeparis
-Author: Authorit
+Author: Mamie, Caca & Bérengère
 Description: theme pour aux délices de paris
 Version 1.0
 License: GNU General Public License v2 or later
