--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -25,7 +25,16 @@ html, body{
 @presqueTurquoise : #89c4b8;
 @blanc : #ffffff;
 @grisTresClaire : #f0f0f0;
+@grisFondConcept: #d8e0da;
 @rougeUnPeuBordeaux: #ca1919;
+@presqueMauve : #a20630;
+
+
+/*Font*/
+
+.writingDevonshire(){
+  font-family: 'Devonshire', cursive;
+}
 
 /*----------------
 	  Style
@@ -59,6 +68,27 @@ header{
     margin-top: 225px;
     text-align: justify;
     color: @rougeUnPeuBordeaux;
+  }
+}
+
+.homepage{
+  .concept{
+    width: 100%;
+    background: @grisFondConcept;
+    padding: 200px 0 200px 0;
+    h1{
+      text-align: center;
+      color: @presqueMauve;
+      margin-top: 65px;
+      font-size: 30px;
+      .writingDevonshire();
+      text-transform: none;
+    }
+    p{
+      text-align: justify;
+      color: @presqueTurquoise;
+      margin-top: 75px;
+    }
   }
 }
 
