--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -80,9 +80,13 @@ header{
       text-align: center;
       color: @presqueMauve;
       margin-top: 65px;
-      font-size: 30px;
+      font-size: 100px;
       .writingH1Concept();
       text-transform: none;
+      padding-bottom: 20px;
+    }
+    img{
+      padding-bottom: 20%;
     }
     p{
       text-align: justify;
