--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -42,7 +42,7 @@ html, body{
 
 /*-------Navbar--------*/
 header{
-  height: 995px;
+  height: 100%;
   background:url('../images/header_bg.jpg');
   background-attachment: fixed;
   background-position: center center;
@@ -75,7 +75,7 @@ header{
   .concept{
     width: 100%;
     background: @grisFondConcept;
-    padding: 200px 0 200px 0;
+    padding: 0;
     h1{
       text-align: center;
       color: @presqueMauve;
