--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -76,7 +76,7 @@ header{
   .concept{
     width: 100%;
     background: @grisFondConcept;
-    padding: 0;
+    padding-bottom: 40px;
     h1{
       text-align: center;
       color: @presqueMauve;
