--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -80,7 +80,6 @@ header{
   .concept{
     width: 100%;
     background: @grisFondConcept;
-    padding-bottom: 40px;
     h1{
       text-align: center;
       color: @presqueMauve;
@@ -97,10 +96,10 @@ header{
       text-align: justify;
       color: @presqueTurquoise;
       margin-top: 75px;
+      padding-bottom: 100px;
     }
   }
  .patissiere{
-   height: 100%;
    background:url('../images/pat_bg.png');
    background-attachment: fixed;
    background-position: center center;
@@ -108,6 +107,7 @@ header{
    -webkit-background-size: cover; /* pour Chrome et Safari */
    -moz-background-size: cover; /* pour Firefox */
    -o-background-size: cover; /* pour Opera*/
+   padding-bottom: 100px;
    .patOne{
      color: @presqueMauve;
      font-size: 60px;
@@ -123,6 +123,13 @@ header{
      strong{
        font-size: 110px;
      }
+   }
+   img{
+     width: 150px;
+     height: 200px;
+     display: block;
+     margin-left: auto;
+     margin-right: auto
    }
  }
 }
