--- a/wp-content/themes/auxdelicesparis/css/style.css
+++ b/wp-content/themes/auxdelicesparis/css/style.css
@@ -62,13 +62,13 @@ border-bottom: 1px dotted #e7e7e7;
 }
 
 
-h1{
+h1 {
 	font-family: Arial Narrow;
 	font-size:30px;
 	text-transform: uppercase;
 	font-weight: lighter;
 	color:#000000;
-	text-align: right;
+	text-align: center;
 }
 
 h2{
