--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -150,3 +150,27 @@ footer{
     }
   }
 }
+
+
+/* woocommerce */
+.products {
+  h3{
+    text-align: left;
+    margin-left:20%;
+    h1 {
+        font-family: Arial Narrow;
+        font-size:30px;
+        text-transform: uppercase;
+        font-weight: lighter;
+        color:#000000;
+        text-align: center; 
+        p{
+         margin-left:20%;
+        }
+      }
+
+    }
+      img{
+        margin-left:20%;
+      }
+}
