--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -160,21 +160,29 @@ footer{
 
 
 /* woocommerce */
-.products {
-  h3{
-    text-align: left;
-    margin-left:20%;
-    h1 {
-        font-family: Arial Narrow;
-        font-size:30px;
+#content{
+  background-color: #dce5e0;
+  h1{
+    font-size:30px;
         text-transform: uppercase;
         font-weight: lighter;
         color:#000000;
-        text-align: center; 
-        p{
-         margin-left:20%;
+        text-align: center;
+        .writingH1Concept();
+        .woocommerce-result-count{
+          margin-left: 20%;
         }
-      }
+  }
+  
+}
+.products {
+  
+  h3 {
+    text-align: left;
+    margin-left:20%;
+  p {
+      margin-left:20%;
+    }
 
     }
       img{
