--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -54,6 +54,23 @@ header{
   -webkit-background-size: cover; /* pour Chrome et Safari */
   -moz-background-size: cover; /* pour Firefox */
   -o-background-size: cover; /* pour Opera*/
+    .cart {
+      position: relative;
+      background-color: @presqueTurquoise;
+        #top-header {
+          padding:15px 0;
+          .glyphicon {
+            font-size: 25px;
+            color: #A20630;
+          }
+          a {
+            color: @pourpre;
+            font-size: 15px;
+            text-decoration: none;
+          }
+        }
+    
+  }
   .nav{
     .menu-item{
       margin-top: 50px;
