--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -45,7 +45,7 @@ body{
 }
 
 /*-------Navbar--------*/
-header{
+header, .header2 {
   height: 100%;
   background:url('../images/header_bg.jpg');
   background-attachment: fixed;
@@ -90,6 +90,10 @@ header{
     text-align: justify;
     color: @rougeUnPeuBordeaux;
   }
+}
+
+.header2 {
+  height: 50%;
 }
 
 .homepage{
