--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -185,14 +185,16 @@ footer{
   background-color: #dce5e0;
   h1{
     font-size:30px;
-        text-transform: uppercase;
-        font-weight: lighter;
-        color:#000000;
-        text-align: center;
-        .writingH1Concept();
-        .woocommerce-result-count{
-          margin-left: 20%;
-        }
+    text-transform: uppercase;
+    font-weight: lighter;
+    color:#000000;
+    text-align: center;
+    position:relative;
+    .writingH1Concept();
+    color: @presqueMauve;
+    .woocommerce-result-count {
+      margin-left: 20%;
+    }
   }
   
 }
