--- a/wp-content/themes/auxdelicesparis/css/style.less
+++ b/wp-content/themes/auxdelicesparis/css/style.less
@@ -180,7 +180,7 @@ footer{
 }
 
 
-/* woocommerce */
+/* woocommerce boutique*/
 #content{
   background-color: #dce5e0;
   .woocommerce-result-count {
@@ -238,3 +238,6 @@ footer{
         border-radius: 90px;
       }
 }
+/* woocommerce panier/commande*/
+
+
